--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <center><h2>Author Details Page</h2></center>
       <h3>Name: {{name}}</h3>
       <h5>Bio: {{bio}}</h5>
-      <h4>Books: {{authors.books}}</h4>
-      <img class="photo" {{bind-attr src=image}}>
+      <h4>Books: {{books}}</h4>
+      <img class="author-photo" {{bind-attr src=image}}>
   </script>
 
 
